--- a/app/index.html
+++ b/app/index.html
@@ -799,40 +799,41 @@
 	<footer class="main-footer homesect s_dark">
 
 
-				<div class="footer-content">
-					<div class="container">
-						<div class="row">
-							<div class="col-lg-2 col-md-3 col-sm-4 col-2">
-								<a href="" class="logo">
-									<img src="img/logo.svg" alt="Armata Financical Group"></a>
-							</div>
+		<div class="footer-content">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-2 col-md-3 col-sm-4 col-2">
+						<a href="" class="logo">
+							<img src="img/logo.svg" alt="Armata Financical Group"></a>
+					</div>
 
-							<div class="col-lg-7 col-md-1 col-sm-1 col-2">
-								<nav class="main-mnu">
-									<ul>
-										<li class="active"><a href="#">Главная</a></li>
-										<li><a href="#">О компании</a></li>
-										<li><a href="#">Оценка</a></li>
-										<li><a href="#">Сделки</a></li>
-										<li><a href="#">Бухгалтерские услуги</a></li>
-										<li><a href="#">Контакты</a></li>
-									</ul>
-								</nav>
-							</div>
+					<div class="col-lg-7 col-md-1 col-sm-1 col-2">
+						<nav class="main-mnu">
+							<ul>
+								<li class="active"><a href="#">Главная</a></li>
+								<li><a href="#">О компании</a></li>
+								<li><a href="#">Оценка</a></li>
+								<li><a href="#">Сделки</a></li>
+								<li><a href="#">Бухгалтерские услуги</a></li>
+								<li><a href="#">Контакты</a></li>
+							</ul>
+						</nav>
+					</div>
 
-							<div class="col-lg-3 col-md-8 col-sm-7 col-8">
-								<div class="phone-wrap">
-									<div class="phone">
-										+7 (495) 00-99-56
-									</div>
-									<a href="#" class="toggle-mnu hidden-lg"><span></span></a>
-								</div>
+					<div class="col-lg-3 col-md-8 col-sm-7 col-8">
+						<div class="phone-wrap">
+							<div class="phone">
+								+7 (495) 00-99-56
 							</div>
+							<a href="#" class="toggle-mnu hidden-lg"><span></span></a>
 						</div>
-		
+					</div>
+				</div>
+
 			</div>
 		</div>
 	</footer>
+	<div class="top" title="Вгору"></div>
 
 
 
